--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -156,8 +156,10 @@
     <ClInclude Include="libraries\tinyobjloader-master\tiny_obj_loader.h" />
     <ClInclude Include="libraries\aie\Gizmos.h" />
     <ClInclude Include="libraries\gl_core_4_4.h" />
+    <ClInclude Include="Physics.h" />
     <ClInclude Include="PhysicsApplication.h" />
     <ClInclude Include="PhysicsObject.h" />
+    <ClInclude Include="Plane.h" />
     <ClInclude Include="RigidBody.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -171,8 +173,10 @@
     <ClCompile Include="libraries\gl_core_4_4.c" />
     <ClCompile Include="libraries\tinyobjloader-master\tiny_obj_loader.cc" />
     <ClCompile Include="OpenGL.cpp" />
+    <ClCompile Include="Physics.cpp" />
     <ClCompile Include="PhysicsApplication.cpp" />
     <ClCompile Include="PhysicsObject.cpp" />
+    <ClCompile Include="Plane.cpp" />
     <ClCompile Include="RigidBody.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
